--- a/apps/hacknews/src/app/home/home.component.scss
+++ b/apps/hacknews/src/app/home/home.component.scss
@@ -1,5 +1,5 @@
-$font-global:  -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+$font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+  Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
 :host {
   font-family: $font-global;
@@ -8,58 +8,15 @@ Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 8px 0;
-}
-
-p {
-  margin: 0;
-}
-
-.spacer {
-  flex: 1;
+  display: block;
+  min-width: 300px;
+  max-width: 1024px;
+  margin: 0px auto 50px auto;
+  width: 100%;
 }
 
 .hidden {
   display: none;
-}
-
-.disabled {
-  pointer-events: none;
-  background-color: #e6e6e6 !important;
-  span {
-    color: rgb(72, 72, 72);
-  }
-}
-
-.toolbar {
-  height: 60px;
-  margin: -8px;
-  display: flex;
-  align-items: center;
-  background-color: #1976d2;
-  color: white;
-  font-weight: 600;
-}
-
-.toolbar img {
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 16px;
-}
-
-.toolbar #twitter-logo:hover {
-  opacity: 0.8;
 }
 
 .content {
@@ -133,22 +90,6 @@ svg.material-icons:not(:last-child) {
   position: relative;
   margin-bottom: 50px;
 }
-
-svg#rocket {
-  width: 60px;
-  position: absolute;
-  left: -30px;
-  top: -35px;
-}
-
-svg#rocket-smoke {
-  height: calc(100vh - 95px);
-  position: absolute;
-  top: 10px;
-  right: 180px;
-  z-index: -10;
-}
-
 a,
 a:visited,
 a:hover {
@@ -158,53 +99,6 @@ a:hover {
 
 a:hover {
   color: #125699;
-}
-
-svg#clouds {
-  position: fixed;
-  bottom: -160px;
-  left: -230px;
-  z-index: -10;
-  width: 1920px;
-}
-
-.field-container {
-  width: 575px;
-  text-align: left;
-  display: flex;
-  margin-bottom: 12px;
-}
-
-.field-input {
-  height: 34px;
-  border: 1px solid #eee;
-  border-radius: 4px;
-  padding: 0 0 0 8px;
-  font-size: 14px;
-  width: 200px;
-
-  &:hover {
-    box-shadow: 0 4px 17px rgba(black, 0.35);
-  }
-}
-
-.select-city {
-  border: 1px solid #eee;
-  border-radius: 4px;
-  padding: 0 0 0 8px;
-  height: 36px;
-  width: 210px;
-  &:hover {
-    box-shadow: 0 4px 17px rgba(black, 0.35);
-  }
-}
-
-.label-field {
-  width: 100px;
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin-right: 10px;
 }
 
 /* Responsive Styles */
