--- a/apps/hacknews/src/app/app.component.scss
+++ b/apps/hacknews/src/app/app.component.scss
@@ -89,6 +89,10 @@ h2 {
   .logo {
     display: flex;
     align-items: center;
+    text-decoration: none;
+    .app-logo-name {
+      color: white;
+    }
   }
 }
 
