--- a/apps/hacknews/src/app/article/article.component.scss
+++ b/apps/hacknews/src/app/article/article.component.scss
@@ -15,10 +15,6 @@ $font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
   width: 100%;
 }
 
-.main-image {
-  max-width: 900px;
-}
-
 .card-container {
   display: flex;
   flex-wrap: wrap;
@@ -26,3 +22,33 @@ $font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
   margin-top: 16px;
 }
 
+.card-main-image {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding: 1rem;
+  .main-image {
+    max-width: 900px;
+    width: 100%;
+  }
+}
+
+.data-content {
+  font-size: 16px;
+}
+
+.original-link {
+  text-align: right;
+  font-size: 16px;
+}
+
+@media screen and (max-width: 1024px) {
+  .data-content {
+    font-size: 14px;
+    padding: 1rem;
+  }
+
+  .original-link {
+    padding: 1rem;
+  }
+}
