--- a/apps/hacknews/src/app/article/article.component.scss
+++ b/apps/hacknews/src/app/article/article.component.scss
@@ -28,8 +28,9 @@ $font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
   justify-content: center;
   padding: 1rem;
   .main-image {
-    max-width: 900px;
-    width: 100%;
+    max-width: 99%;
+    max-height: 99%;
+    object-fit: cover;
   }
 }
 
@@ -45,9 +46,10 @@ $font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 @media screen and (max-width: 1024px) {
   .data-content {
     font-size: 14px;
-    padding: 1rem;
+    padding: 1rem; 
   }
 
+  .card-container,
   .original-link {
     padding: 1rem;
   }
