--- a/apps/hacknews/src/app/home/home.component.html
+++ b/apps/hacknews/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="card-container">
     <mat-accordion>
       <mat-expansion-panel *ngFor="let article of listArticles; index as i">
-        <mat-expansion-panel-header>
+        <mat-expansion-panel-header collapsedHeight="*" expandedHeight="*">
           <mat-panel-title> {{ i + 1 }}. {{ article.title }} </mat-panel-title>
         </mat-expansion-panel-header>
         <mat-panel-description>
@@ -20,5 +20,9 @@
         </a>
       </mat-expansion-panel>
     </mat-accordion>
+  </div>
+  <div class="card-container">
+    <button mat-stroked-button (click)="loadMore(page)" *ngIf="!isLoading">Load more</button>
+    <mat-spinner [diameter]="30" *ngIf="isLoading"></mat-spinner>
   </div>
 </div>
