- Display image correctly when using mobile/tablet

--- a/apps/hacknews/src/app/article/article.component.scss
+++ b/apps/hacknews/src/app/article/article.component.scss
@@ -36,6 +36,13 @@ $font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 
 .data-content {
   font-size: 16px;
+  ::ng-deep {
+    img {
+      max-width: 99% !important;
+      max-height: 99% !important;
+      object-fit: scale-down;
+    }
+  }
 }
 
 .original-link {
@@ -46,7 +53,7 @@ $font-global: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 @media screen and (max-width: 1024px) {
   .data-content {
     font-size: 14px;
-    padding: 1rem; 
+    padding: 1rem;
   }
 
   .card-container,
